--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ https://www.tooplate.com/view/2120-ben-resume
                 </ul>
 
                 <div class="mt-lg-0 mt-3 mb-4 mb-lg-0">
-                    <a href="#" class="custom-btn btn" download>Download CV</a>
+                    <a href="resume.pdf" class="custom-btn btn" download>Download CV</a>
                 </div>
             </div>
 
@@ -92,7 +92,7 @@ https://www.tooplate.com/view/2120-ben-resume
                    <div class="d-flex flex-column justify-content-center align-items-center col-lg-7 col-md-7 col-12">
                         <div class="hero-text">
 
-                            <h1 class="hero-title">👋 Sidhartha A Data Scientist</h1>
+                            <h2 class="hero-title">👋 Sidhartha Hi</h2>
 
                             <a href="#" class="email-link">
                                 sidharthmandal007@gmail.com
@@ -309,11 +309,9 @@ https://www.tooplate.com/view/2120-ben-resume
                 </p>
 
                 <ul class="social-links mt-2">
-                    <li><a href="https://fb.com/tooplate" rel="noopener" class="fab fa-facebook"></a></li>
-                    <li><a href="#" rel="noopener" class="fab fa-twitter"></a></li>
-                    <li><a href="#" rel="noopener" class="fab fa-instagram"></a></li>
-                    <li><a href="#" rel="noopener" class="fab fa-linkedin"></a></li>
-                    <li><a href="#" rel="noopener" class="fab fa-youtube"></a></li>
+                    <li><a href="https://www.facebook.com/Siddharth.0007" rel="noopener" class="fab fa-facebook"></a></li>
+                    <li><a href="https://github.com/sidharthamondal" rel="noopener" class="fab fa-github"></a></li>
+                    <li><a href="https://www.linkedin.com/in/sidhartha-sankar-mondal-651b04106/" rel="noopener" class="fab fa-linkedin"></a></li>
                 </ul>
                 
             </div>
